fix(Select): do not wrap text, closes #57

--- a/components/select/index.styl
+++ b/components/select/index.styl
@@ -143,7 +143,10 @@
     overflow auto
     .k-active
         color $primary-color
-
+    .k-item
+        white-space nowrap
+        overflow hidden
+        text-overflow ellipsis
     // group
     .k-group
         > .k-label
